{
    "name": "TouchControls",
    "maps": [
        {
            "name": "PlayerControl",
            "id": "88c79b47-e862-4857-a48d-b7ee4fb32eaa",
            "actions": [
                {
                    "name": "TouchPos",
                    "type": "Value",
                    "id": "e11041b1-dd71-4578-b6f1-048f516f5940",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchMove",
                    "type": "Value",
                    "id": "c77a6efc-eb80-417b-b6cb-b7a754b6bdae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cd777e31-f0b3-4f8c-8981-5ad1280cbdb7",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "128565a1-d900-4e08-83fb-5ebd67bc48e2",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3f3bcf2f-0200-430f-a12c-b222679444f8",
                    "path": "<Touchscreen>/primaryTouch/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "726948be-c1c4-4295-aaee-5d22901a9079",
                    "path": "<Touchscreen>/primaryTouch/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "91b19c61-78fc-4e56-ae30-f126ce6e3024",
                    "path": "<Touchscreen>/primaryTouch/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e801487e-6e3e-482d-a28e-91cb68ce4dad",
                    "path": "<Touchscreen>/primaryTouch/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}